Display all of the movies in the database on the homepage
Now the server sends the client all of the movies in the database along with a link to the movie posters and an overview of each of movie.

--- a/angular-app/src/app/user-list/user-list.component.html
+++ b/angular-app/src/app/user-list/user-list.component.html
@@ -28,8 +28,8 @@
         <mat-card-header>
           <mat-card-title>{{user.name}}</mat-card-title>
         </mat-card-header>
-        <img mat-card-image
-          src="https://media-cldnry.s-nbcnews.com/image/upload/MSNBC/Components/Photo/_new/110505-chernobyl-ferriswheel-pripyat.jpg" />
+        <!-- <img mat-card-image
+          src="https://media-cldnry.s-nbcnews.com/image/upload/MSNBC/Components/Photo/_new/110505-chernobyl-ferriswheel-pripyat.jpg" /> -->
         <mat-card-content>
           <style>
             .ellipsis {
