--- a/angular-app/src/app/movie-info/movie-info.component.html
+++ b/angular-app/src/app/movie-info/movie-info.component.html
@@ -1,12 +1,11 @@
 <div class="content">
-  <div fxLayout="row wrap" fxLayoutGap="16px grid" >
-    <div fxFlex="10%" fxFlex.xs="100%" fxFlex.sm="33%" fxLayoutAlign="stretch" *ngFor="let movie of movies">
+  <div fxLayout="row wrap" fxLayoutGap="16px grid">
+    <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="33%" fxLayoutAlign="stretch">
       <mat-card class="mat-elevation-z4">
         <mat-card-header>
           <mat-card-title>{{movie.title}}</mat-card-title>
         </mat-card-header>
-        <img (click)="openMovie(movie.id)" class="clickable" mat-card-image
-          src={{movie.poster}}/>
+        <img mat-card-image src={{movie.poster}} />
         <mat-card-content>
           <style>
             .ellipsis {
@@ -23,3 +22,4 @@
     </div>
   </div>
 </div>
+
