--- a/angular-app/src/app/movie-list/movie-list.component.html
+++ b/angular-app/src/app/movie-list/movie-list.component.html
@@ -1,12 +1,18 @@
+<div>
+  <input type="text" placeholder="Filter by city" #filter>
+  <button matSuffix mat-button (click)="getMovie(filter.value)"><mat-icon>search</mat-icon></button>
+</div>
+
 <div class="content">
   <div fxLayout="row wrap" fxLayoutGap="16px grid" >
     <div fxFlex="10%" fxFlex.xs="100%" fxFlex.sm="33%" fxLayoutAlign="stretch" *ngFor="let movie of movies">
       <mat-card class="mat-elevation-z4">
-        <mat-card-header>
-          <mat-card-title>{{movie.title}}</mat-card-title>
-        </mat-card-header>
+
         <img (click)="openMovie(movie.id)" class="clickable" mat-card-image
           src={{movie.poster}}/>
+          <mat-card-header>
+            <mat-card-title>{{movie.title}}</mat-card-title>
+          </mat-card-header>
         <mat-card-content>
           <style>
             .ellipsis {
