--- a/angular-app/src/app/movie-list/movie-list.component.html
+++ b/angular-app/src/app/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
 <div>
-  <input type="text" placeholder="Filter by city" #filter>
+  <input type="text" placeholder="Search for a movie" #filter>
   <button matSuffix mat-button (click)="getMovie(filter.value)"><mat-icon>search</mat-icon></button>
 </div>
 
