--- a/angular-app/src/app/movie-list/movie-list.component.html
+++ b/angular-app/src/app/movie-list/movie-list.component.html
@@ -22,7 +22,7 @@
           <p class="overflow ellipsis">{{movie.overview}}</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button (click)="updateMovie(movie.id)" class="btn btn-info">Update</button>
+          <button mat-button (click)="addToUserList(movie.id)" class="btn btn-info">Add to list</button>
           <button mat-button (click)="deleteMovie(movie.id)" class="btn btn-danger">Delete</button>
         </mat-card-actions>
       </mat-card>
