--- a/angular-app/src/app/user-list/user-list.component.css
+++ b/angular-app/src/app/user-list/user-list.component.css
@@ -1,16 +1,13 @@
-.content {
-  padding: 16px;
+.layout-row {
+
+  display: flex;
+  align-items: stretch;
+
 }
 
-.content>mat-card {
-  width: 200px;
-  word-break: break-all;
-}
-.ellipsis {
-  text-overflow: ellipsis;
+.clickable {
+  cursor: pointer;
 
-  /* Required for text-overflow to do anything */
-  white-space: nowrap;
-  overflow: hidden;
 }
+
 
