--- a/angular-app/src/app/user-list/user-list.component.html
+++ b/angular-app/src/app/user-list/user-list.component.html
@@ -17,7 +17,7 @@
           <p class="overflow ellipsis">{{movie.overview}}</p>
         </mat-card-content>
         <mat-card-actions>
-          <!-- <button mat-button (click)="addToUserList(movie.id)" class="btn btn-info">Add to list</button> -->
+          <button mat-button (click)="removeFromUserList(movie.id)" class="btn btn-info">Remove from list</button>
           <!-- <button mat-button (click)="deleteMovie(movie.id)" class="btn btn-danger">Delete</button> -->
         </mat-card-actions>
       </mat-card>
