--- a/angular-app/src/app/movie-info/movie-info.component.html
+++ b/angular-app/src/app/movie-info/movie-info.component.html
@@ -14,7 +14,7 @@
           </style>
           <p class="overflow ellipsis">{{movie.overview}}</p>
         </mat-card-content>
-        <mat-card-actions>
+        <mat-card-actions class="actions">
           <button mat-button (click)="updateMovie(movie.id)" class="btn btn-info">Update</button>
           <button mat-button (click)="deleteMovie(movie.id)" class="btn btn-danger">Delete</button>
         </mat-card-actions>
