--- a/angular-app/src/app/movie-list/movie-list.component.css
+++ b/angular-app/src/app/movie-list/movie-list.component.css
@@ -8,8 +8,7 @@
   cursor: pointer;
 
 }
-/* mat-card img {
-  object-fit: cover;
-  width: 100%;
-  height: 20%;
-} */
+.actions {
+  margin-top: auto;
+  text-align: center;
+}
