Add page for searching movies on front end

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -4,8 +4,13 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLinkActive="active" routerLink="demo" *ngIf="accountService.isLoggedIn">User List</a>
+      <a class="nav-item nav-link active" routerLinkActive="active" href="http://localhost:8080/logout" *ngIf="accountService.isLoggedIn">Logout</a>
       <a class="nav-item nav-link active" routerLinkActive="active" href="http://localhost:8080/login" *ngIf="!accountService.isLoggedIn">Login</a>
     </div>
+  </div>
+  <div>
+    <input type="text" placeholder="Search for a movie" #filter>
+    <button matSuffix mat-button (click)="getMovie(filter.value)"><mat-icon>search</mat-icon></button>
   </div>
 </nav>
 <router-outlet></router-outlet>
