--- a/angular-app/src/app/movie-list/movie-list.component.html
+++ b/angular-app/src/app/movie-list/movie-list.component.html
@@ -1,8 +1,3 @@
-<div>
-  <input type="text" placeholder="Search for a movie" #filter>
-  <button matSuffix mat-button (click)="getMovie(filter.value)"><mat-icon>search</mat-icon></button>
-</div>
-
 <div class="content">
   <div fxLayout="row wrap" fxLayoutGap="16px grid" >
     <div fxFlex="10%" fxFlex.xs="100%" fxFlex.sm="33%" fxLayoutAlign="stretch" *ngFor="let movie of movies">
@@ -22,8 +17,7 @@
           <p class="overflow ellipsis">{{movie.overview}}</p>
         </mat-card-content>
         <mat-card-actions class="actions">
-          <button mat-button (click)="addToUserList(movie.id)" class="btn btn-info">Add to list</button>
-          <button mat-button (click)="deleteMovie(movie.id)" class="btn btn-danger">Delete</button>
+          <button mat-button (click)="addToUserList(movie.id)" class="btn btn-info" *ngIf="accountService.isLoggedIn">Add to list</button>
         </mat-card-actions>
       </mat-card>
     </div>
