Fix angular url search not working, added dedicated search page

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -4,6 +4,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLinkActive="active" routerLink="demo" *ngIf="accountService.isLoggedIn">User List</a>
+      <a class="nav-item nav-link active" routerLinkActive="active" routerLink="search">All Movies</a>
       <a class="nav-item nav-link active" routerLinkActive="active" href="http://localhost:8080/logout" *ngIf="accountService.isLoggedIn">Logout</a>
       <a class="nav-item nav-link active" routerLinkActive="active" href="http://localhost:8080/login" *ngIf="!accountService.isLoggedIn">Login</a>
     </div>
