--- a/angular-app/src/app/movie-info/movie-info.component.html
+++ b/angular-app/src/app/movie-info/movie-info.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div fxLayout="row wrap" fxLayoutGap="16px grid">
+  <div fxLayoutGap="16px grid">
     <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="33%" fxLayoutAlign="stretch">
       <mat-card class="mat-elevation-z4">
         <mat-card-header>
