Center movie info page and add year as a subtitle

--- a/angular-app/src/app/movie-info/movie-info.component.css
+++ b/angular-app/src/app/movie-info/movie-info.component.css
@@ -1,8 +1,17 @@
-.actions {
-  margin-top: auto;
-  text-align: center;
-}
-.content {
+
+.main {
+  display: flex;
   justify-content: center;
   align-items: center;
+
+
+}
+.mat-elevation-z4{
+    max-width: 25%;
+}
+
+mat-card img {
+  object-fit: cover;
+  width: 50%;
+  height: 50%;
 }
