--- a/angular-app/src/app/movie-list/movie-list.component.html
+++ b/angular-app/src/app/movie-list/movie-list.component.html
@@ -7,6 +7,7 @@
           src={{movie.poster}}/>
           <mat-card-header>
             <mat-card-title>{{movie.title}}</mat-card-title>
+            <mat-card-subtitle>{{movie.year}}</mat-card-subtitle>
           </mat-card-header>
         <mat-card-content>
           <style>
