--- a/angular-app/src/app/user-list/user-list.component.html
+++ b/angular-app/src/app/user-list/user-list.component.html
@@ -6,6 +6,7 @@
         <img (click)="openMovie(movie.id)" class="clickable" mat-card-image src={{movie.poster}} />
         <mat-card-header>
           <mat-card-title>{{movie.title}}</mat-card-title>
+          <mat-card-subtitle>{{movie.year}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
           <style>
